--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@commitlint/config-conventional": "^18.4.4",
+    "@prisma/client": "^5.8.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "bcrypt": "^5.1.1",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -44,6 +47,7 @@
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "2.8.4",
+    "prisma": "^5.8.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
