--- a/package.json
+++ b/package.json
@@ -9,47 +9,41 @@
     "lint": "next lint",
     "prepare": "husky install"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@commitlint/config-conventional": "^18.4.4",
     "@prisma/client": "^5.8.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
     "bcrypt": "^5.1.1",
+    "eslint-config-next": "^14.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
+    "@types/node": "^20.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-next": "14.0.4",
-    "eslint-config-prettier": "8.7.0",
-    "eslint-plugin-cypress": "2.12.1",
-    "eslint-plugin-filenames": "1.3.2",
-    "eslint-plugin-fp": "2.3.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jest-dom": "4.0.2",
-    "eslint-plugin-json": "3.1.0",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-ramda": "2.5.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-simple-import-sort": "8.0.0",
-    "eslint-plugin-testing-library": "5.7.2",
-    "eslint-plugin-unused-imports": "2.0.0",
+    "eslint": "^8.56.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "postcss": "^8",
-    "prettier": "2.8.4",
+    "prettier": "^3.2.5",
     "prisma": "^5.8.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
