--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.8.0",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
     "eslint-config-next": "^14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -27,7 +28,8 @@
     "next-auth": "^4.24.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
