--- a/package.json
+++ b/package.json
@@ -15,21 +15,25 @@
   "dependencies": {
     "@commitlint/config-conventional": "^18.4.4",
     "@prisma/client": "^5.8.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "eslint-config-next": "^14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "lucide-react": "^0.331.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
