--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "i18next": "^23.9.0",
+    "i18next-resources-to-backend": "^1.2.0",
     "lucide-react": "^0.331.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-i18n-router": "^5.3.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-i18next": "^14.0.5",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
