--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.8.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
